[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://GFX/PNG/Tiles/tile_129.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Characters/BoxOccluder.tres" type="OccluderPolygon2D" id=4]
[ext_resource path="res://GFX/PNG/Hitman 1/hitman1_stand.png" type="Texture" id=5]

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -2.151, 0 )

[node name="LightOccluder2D" parent="." index="3"]
occluder = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="." index="4"]
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 1.5
one_shot = true

[node name="Timer2" type="Timer" parent="." index="6"]
one_shot = true

[node name="Label" type="Label" parent="." index="7"]
margin_left = -14.0
margin_top = -60.0
margin_right = 14.0
margin_bottom = -46.0
rect_min_size = Vector2( 28, 14 )
text = "0.00"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
